--- a/src/chi/themes/centurylink/_variables.scss
+++ b/src/chi/themes/centurylink/_variables.scss
@@ -874,7 +874,9 @@ $card-header-background-color:              transparent;
 $card-header-border-color:                  rgba($color-black, 0.12);
 $card-header-box-shadow:                    inset 0 -1px 0 0 $card-header-border-color;
 $card-header-padding:                       1rem;
+$card-header-content-padding-top:           $card-header-padding;
 $card-header-sm-padding:                    0.5rem 1rem;
+$card-header-title-margin:                  0;
 $card-header-min-height:                    2rem;
 $card-footer-border-color:                  rgba($color-black, 0.12);
 $card-footer-padding:                       1rem;
@@ -894,6 +896,8 @@ $card-widget-border:                        0.0625rem solid $color-grey-20;
 $card-widget-title-font-size:               $font-size-7;
 $card-widget-title-font-weight:             $font-weight-extra-bold;
 $card-widget-content-padding:               1rem;
+$card-widget-header-content-padding-top:    0;
+$card-widget-header-padding:                1rem;
 $card-widget-header-sm-padding:             0.75rem 1rem;
 
 $card-title-font-size:                      $font-size-lg;
