--- a/src/chi/themes/test/_variables.scss
+++ b/src/chi/themes/test/_variables.scss
@@ -886,17 +886,19 @@ $button-group-vertical-xl-icon-padding: $button-icon-xl-padding;
 $button-group-border-width: $button-solid-border-width;
 
 // Card
-$card-background-color: $color-white;
+$card-background-color: $color-background-white;
 $card-border: 0.0625rem solid rgba($color-black, 0.12);
 $card-border-radius: 0.5rem;
 $card-active-border-color: $color-teal-80;
 $card-active-title-text-color: $color-text-base;
 $card-active-icon-color: $color-teal-70;
-$card-header-background-color: $color-background-white;
+$card-header-background-color: transparent;
 $card-header-border-color: transparent;
 $card-header-box-shadow: none;
-$card-header-padding: 0.5rem 0;
+$card-header-content-padding-top: 0.5rem;
+$card-header-padding: 1.25rem 1.25rem 0;
 $card-header-sm-padding: 0.5rem 1rem;
+$card-header-title-margin: 0;
 $card-header-min-height: 2rem;
 $card-footer-border-color: rgba($color-black, 0.12);
 $card-footer-padding: 1.25rem;
@@ -906,7 +908,7 @@ $card-empty-icon-color: $color-text-muted-light;
 $card-content-padding: 1.25rem;
 $card-tabs-padding: 1rem 2rem;
 $card-tabs-border-bottom: inset 0 -0.125rem 0 0 $color-border-base;
-$card-title-margin: 0 0 0.625rem 0;
+$card-title-margin: 0 0 0.5rem;
 $card-highlight-background-color: $color-cyan-10;
 $card-highlight-border-color: $color-cyan-20;
 $card-highlight-header-background-color: $color-background-white;
@@ -916,9 +918,11 @@ $card-widget-border: $card-border;
 $card-widget-title-font-size: $font-size-6;
 $card-widget-title-font-weight: $font-weight-bold;
 $card-widget-content-padding: 1.25rem;
+$card-widget-header-content-padding-top: 0.5rem;
+$card-widget-header-padding: $card-header-padding;
 $card-widget-header-sm-padding: 0.75rem 1rem;
 
-$card-title-font-size: $font-size-6;
+$card-title-font-size: $font-size-xl;
 $card-title-font-weight: $font-weight-bold;
 $card-title-line-height: $line-height-lg;
 
